tests/ui/derive_specifier/duplicate_derive_1.stderr
error: encountered duplicate `#[derive(Specifier)]` parameter
 --> tests/ui/derive_specifier/duplicate_derive_1.rs:4:21
  |
4 | #[derive(Specifier, Specifier)]
  |                     ^^^^^^^^^

error: previous `#[derive(Specifier)]` parameter here
 --> tests/ui/derive_specifier/duplicate_derive_1.rs:4:10
  |
4 | #[derive(Specifier, Specifier)]
  |          ^^^^^^^^^
